tests/snapshots/skip_fields.snap
---
source: tests/test_roundtrip.rs
expression: serialized
---
visible=you+can+see+me&skip_de=not+deserialized
