tests/snapshots/skip_serializing_if_fields-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
maybe_string=present&
maybe_vec%5B0%5D=1&
maybe_vec%5B1%5D=2&
maybe_vec%5B2%5D=3&
maybe_zero=42&
always_present=always
