tests/snapshots/skip_serializing_if_fields-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
always_present=still+here
