tests/snapshots/skip_serializing_if_fields-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
always_present=still%20here
