tests/snapshots/skip_serializing_if_fields@form.snap
---
source: tests/test_roundtrip.rs
description: "SkipSerializingIf { maybe_string: Some(\"present\"), maybe_vec: [1, 2, 3], maybe_zero: 42, always_present: \"always\" }"
---
maybe_string=present&
maybe_vec%5B0%5D=1&
maybe_vec%5B1%5D=2&
maybe_vec%5B2%5D=3&
maybe_zero=42&
always_present=always
