tests/snapshots/skip_serializing_if_fields@query.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
maybe_string=present&
maybe_vec[0]=1&
maybe_vec[1]=2&
maybe_vec[2]=3&
maybe_zero=42&
always_present=always
