tests/snapshots/string_ownership-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
owned=hello%20world&
vec_owned[0]=one&
vec_owned[1]=two&
vec_owned[2]=three
