tests/snapshots/string_ownership.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
owned=hello+world&
vec_owned[0]=one&
vec_owned[1]=two&
vec_owned[2]=three
